--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-title: [Codeforpassion.com]
-description: [This website provides with the best content possible from the internet.]
+Hello World!!!!
